[package]
name = "ruduo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.0", features = ["os-poll", "net"]}
crossbeam-channel = "0.5.1"
slab = "0.4.5"
libc = "0.2"
once_cell = "1.9.0"
async_logging = { git = "https://github.com/lythesia/async_logging", branch = "master" }

[dev-dependencies]
ctrlc = "3.2.1"

[[example]]
name = "chat"